# fastapi-google-login

./: .env.example  .gitignore  AGENTS.md  README.md  main.py
app/: api.py  auth.py  dependencies.py
google_auth/: AGENTS.md  README.md  __init__.py  pyproject.toml
google_auth/app/: api.py  auth.py  config.py  dependencies.py
google_auth/static/css/: base.css  components.css  tokens.css
google_auth/templates/pages/: auth_success.html  home.html
google_auth/templates/partials/: navbar.html
static/css/: layout.css  themes.css
static/js/: app.js  theme.js
templates/: base.html
templates/pages/: auth_success.html  dashboard.html  login.html
templates/partials/: footer.html
