[project]
name = "fastapi-google-login"
version = "0.1.0"
description = "FastAPI application with Google OAuth2 login, signup, logout and dashboard"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "authlib>=1.4.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "pydantic-settings>=2.9.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
]
